# lambdagrader-package

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/lambdagrader/: __about__.py  __init__.py  add_numbers.py  core.py
src/lambdagrader/jupyter-cell-scripts/: append-to-end-of-notebook.py  grader-manual-template.py  grader-template.py  prepend-to-start-of-notebook.py
tests/: __init__.py  test_add_numbers.py  test_grader.py
tests/test-notebooks/: PCard-20230203-test-graded.ipynb  PCard-20230203-test.ipynb  PCard_Starter_20230126-graded.ipynb  PCard_Starter_20230126.ipynb  case-study-01-rideshare-vehicles-SOLUTION-graded.ipynb  case-study-01-rideshare-vehicles-SOLUTION.ipynb  case-study-02-starbucks-app-customers-SOLUTION-graded.ipynb  case-study-02-starbucks-app-customers-SOLUTION.ipynb  exercise-05-pandas-filtering-sorting-SOLUTION-graded.ipynb  exercise-05-pandas-filtering-sorting-SOLUTION.ipynb  lambdagrader-result.json  test-file-graded.html  test-file-graded.ipynb  test-file-result.json  test-file-transformed.ipynb  test-file.ipynb  test-file_user_code.py
