[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "lambdagrader"
dynamic = ["version", "dependencies"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Ye Joo Park", email = "subwaymatch@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Documentation = "https://github.com/subwaymatch/lambdagrader#readme"
Issues = "https://github.com/subwaymatch/lambdagrader/issues"
Source = "https://github.com/subwaymatch/lambdagrader"

[tool.hatch.version]
path = "src/lambdagrader/__about__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/lambdagrader tests}"

[tool.coverage.run]
source_pkgs = ["lambdagrader", "tests"]
branch = true
parallel = true
omit = [
  "src/lambdagrader/__about__.py",
]

[tool.coverage.paths]
lambdagrader = ["src/lambdagrader", "*/lambdagrader/src/lambdagrader"]
tests = ["tests", "*/lambdagrader/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
